--- a/t/te/tec/technewsworld.com.html
+++ b/t/te/tec/technewsworld.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the technewsworld.com privacy policy that was archived on 2013-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130602123044id_/http%3A//www.ectnews.com/about/privacy.xhtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the technewsworld.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225103443id_/http%3A//www.ectnews.com/about/privacy.xhtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 				
@@ -20,12 +20,21 @@
 	<link rel="alternate stylesheet" type="text/css" media="screen" title="printsheet" href="/shared/print.css">
 	<link rel="stylesheet" type="text/css" media="print" href="/shared/general.css">
 	<link rel="stylesheet" type="text/css" media="print" href="/shared/print.css">
-	<link rel="stylesheet" href="/shared/ajax/lightview/lightview.css" type="text/css">
+	<link rel="stylesheet" href="/shared/ajax/colorbox/colorbox.css" type="text/css">
 
 
-	<script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=502379303161829"></script><script type="text/javascript" src="http://www.ectnews.com/shared/ajax/protoaculous.1.7.1-1.9.0.min.js"></script>
-	<script type="text/javascript" src="/shared/ajax/lightview/lightview.js"></script>
-	<script type="text/javascript" src="/shared/general.js"></script>
+	<script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=502379303161829"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="http://www.ectnews.com/shared/ajax/jquery-1.9.1.js"></script>
+	<script type="text/javascript" src="http://www.ectnews.com/shared/ajax/jquery-ui-1.10.3.custom.min.js"></script>
+	<script type="text/javascript" src="http://www.ectnews.com/shared/ajax/colorbox/jquery.colorbox-min.js"></script>
+	<script type="text/javascript" src="http://www.ectnews.com/shared/general-jquery.js"></script>
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-9357282-6');
+	ga('send', 'pageview');
+	</script>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -45,7 +54,7 @@
 <div id="tnav">
 
 	<div id="top-sitelinks" style="float:right">
-	<a href="http://www.ecommercetimes.com/">E-BUSINESS</a> | <a href="http://www.technewsworld.com/">TECHNOLOGY</a> | <a href="http://www.crmbuyer.com/">CRM</a> | <a href="http://www.linuxinsider.com/">LINUX</a> | <a href="http://www.macnewsworld.com/">MAC</a> | <a href="http://www.ectnews.com/about/network_map.xhtml">NETWORK MAP</a>
+	<a href="http://www.ecommercetimes.com/">E-BUSINESS</a> | <a href="http://www.technewsworld.com/">TECHNOLOGY</a> | <a href="http://www.crmbuyer.com/">CRM</a> | <a href="http://www.linuxinsider.com/">LINUX</a> | <a href="http://www.ectnews.com/about/network_map.xhtml">NETWORK MAP</a>
 	</div>
 	
 	Welcome | <a href="/perl/User.pl">Sign In</a>
@@ -58,30 +67,37 @@ ENN_site = 'enn';
 
 <div id="toprow">
 
-	<a href="/"><img src="/images/2008/enn-logo.png" border="0" align="left" alt="ECTNews.com"></a>
+	<a href="/"><img src="/images/2013/enn-logo.png" border="0" align="left" alt="ECTNews.com"></a>
 
 	<div id="adtitle" class="adtitle" style="padding-top:13px">
 	
 	
-	<!--ps: 127 crid: 8426:maneng_jun_728-1 cc:us-->
-	<a href="" onclick=" { ENN_wo('http://www.ectnews.com/adsys/link/?crid=8426&amp;ENN_rnd=13701762443876'); return false; }" onmouseover="status='http://www.manageengine.com/network-monitoring/?utm_source=technewsworld&amp;utm_medium=website-cpm&amp;utm_campaign=leaderboardOPM&amp;utm_term=Jan13&amp;utm_content=theres'; return true;" onmouseout="status=''; return true;"><img src="/images/sda/manageengine2013__728x90.jpg" width="728" height="90" border="0" alt="ManageEngine"></a>
-	<img class="ct-8426-maneng_jun_728-1" src="http://www.ectnews.com/adsys/count/8426/?nm=maneng_jun_728-1&amp;ENN_rnd=13701762443876&amp;ign=0/ign.gif" width="0" height="0" alt="" style="position:absolute; left:0px; top:0px">
-	<!--/ps: 127 crid: 8426:maneng_jun_728-1 cc:us-->
+	<!--ps: 127 crid: 8697:a-i_lmi_728-1 cc:us-->
+	<script type="text/javascript"><!--//<![CDATA[
+  var ord = window.ord || Math.floor(Math.random() * 1e16);
+  document.write('<iframe src="http://ad.doubleclick.net/N8456/adi/IDG.ECTNews.com/IDG.ECTNews.com_US_5_Spotbuy;sf=1302_ldb;sz=728x90;ord=13879676832099?" width="728" height="90" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no"></iframe>');
+//]]>//--></script><iframe src="http://ad.doubleclick.net/N8456/adi/IDG.ECTNews.com/IDG.ECTNews.com_US_5_Spotbuy;sf=1302_ldb;sz=728x90;ord=13879676832099?" width="728" height="90" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no"></iframe>
+<noscript>
+<a href="http://ad.doubleclick.net/N8456/jump/IDG.ECTNews.com/IDG.ECTNews.com_US_5_Spotbuy;sf=1302_ldb;sz=728x90;ord=13879676832099?">
+<img src="http://ad.doubleclick.net/N8456/ad/IDG.ECTNews.com/IDG.ECTNews.com_US_5_Spotbuy;sf=1302_ldb;sz=728x90;ord=13879676832099?" width="728" height="90" />
+</a>
+</noscript>
+	<img class="ct-8697-a-i_lmi_728-1" src="http://www.ectnews.com/adsys/count/8697/?nm=a-i_lmi_728-1&amp;ENN_rnd=13879676832099&amp;ign=0/ign.gif" width="0" height="0" alt="" style="position:absolute; left:0px; top:0px">
+	<!--/ps: 127 crid: 8697:a-i_lmi_728-1 cc:us-->
 	
 	
 	</div>
 		
 </div>
-<div class="printlogo"><a href="/"><img id="printlogo" src="/images/2008/enn-logo.png" border="0" alt=""></a></div>
+<div class="printlogo"><a href="/"><img id="printlogo" src="/images/2013/enn-logo.png" border="0" alt=""></a></div>
 
 <div style="background-color:white;">
 	<table style="width:100%" id="sitelogos">
 	<tbody><tr>
 	<td align="center"><a href="http://www.ecommercetimes.com"><img src="/images/2004/logo_enn_fp_ect_140x60.gif" width="140" height="60" border="0" alt="E-Commerce Times"></a></td>
-	<td align="center"><a href="http://www.linuxinsider.com"><img src="/images/2004/logo_enn_fp_lni_140x60.gif" width="140" height="60" border="0" alt="LinuxInsider"></a></td>
 	<td align="center"><a href="http://www.technewsworld.com"><img src="/images/2004/logo_enn_fp_tnw_140x60.gif" width="140" height="60" border="0" alt="TechNewsWorld"></a></td>
-	<td align="center"><a href="http://www.crmbuyer.com"><img src="/images/2004/logo_enn_fp_cad_140x60.gif" width="140" height="60" border="0" alt="CRM Buyer"></a></td>
-	<td align="center"><a href="http://www.macnewsworld.com"><img src="/images/2004/logo_enn_fp_mac_140x60.gif" width="140" height="60" border="0" alt="MacNewsWorld"></a></td>
+	<td align="center"><a href="http://www.crmbuyer.com"><img src="/images/2013/logo_enn_fp_cad_146x60.png" width="146" height="60" border="0" alt="CRM Buyer"></a></td>
+	<td align="center"><a href="http://www.linuxinsider.com"><img src="/images/2004/logo_enn_fp_lni_140x60.gif" width="140" height="60" border="0" alt="LinuxInsider"></a></td>
 	</tr>
 	</tbody></table>
 	</div>
@@ -90,7 +106,7 @@ ENN_site = 'enn';
 <div class="searchspace"><span id="sitesearch_indicator" style="display: none;font-size:1px;width=16px;height=16px;padding:0px;margin-top:3px;"><img src="/images/ajax-loader.gif" alt="Working..."></span>
 
 <form class="searchspace" method="get" action="/perl/search.pl">
-<input type="image" class="searchbutton" src="/images/2005/enn_search_tab.png" style="width:65px;height:17px" border="0" alt="Search"> <input type="text" id="sitesearch" name="query" class="searchbox">
+<input type="image" class="searchbutton" src="/images/2013/enn_search_tab.png" style="width:65px;height:17px" border="0" alt="Search"> <input type="text" id="sitesearch" name="query" class="searchbox">
 </form>
 <div class="auto_complete" id="sitesearch_auto_complete"></div>
 </div>
@@ -179,7 +195,6 @@ Privacy Policy
 	</li>
 	<li><a href="http://www.linuxinsider.com/">LinuxInsider</a>
 		<ul>
-		
 			<li><a href="http://www.linuxinsider.com/perl/section/business_news/">Business</a></li>
 	<li><a href="http://www.linuxinsider.com/perl/section/linux-community/">Community</a></li>
 	<li><a href="http://www.linuxinsider.com/perl/section/linux-developer/">Developers</a></li>
@@ -192,7 +207,6 @@ Privacy Policy
 		</ul>
 		
 	</li>
-	
 	
 	<li><a href="http://www.technewsworld.com/">TechNewsWorld</a>
 		
@@ -231,7 +245,7 @@ Privacy Policy
 
 	<li><a href="http://www.technewsworld.com/perl/section/mobile-tech/">Mobile Tech</a>
 		<ul>
-		<li><a href="http://www.technewsworld.com/perl/section/mobile-apps/">Apps</a></li>
+		<li><a href="http://www.technewsworld.com/perl/section/mobile-apps/">Mobile Apps</a></li>
 		<li><a href="http://www.technewsworld.com/perl/section/smartphones/">Smartphones</a></li>
 		<li><a href="http://www.technewsworld.com/perl/section/tablets/">Tablets</a></li>
 		<li><a href="http://www.technewsworld.com/perl/section/wireless-networking/">Wireless Networking</a></li>
@@ -268,13 +282,11 @@ Privacy Policy
 	</li>
 	<li><a href="/perl/section/tech-blog/">Tech Blog</a></li>
 		</ul>
-		
-
 	
 	</li>
 
 	<li><a href="http://www.crmbuyer.com/">CRM Buyer</a>
-		
+
 		<ul>
 			<li><a href="http://www.crmbuyer.com/perl/section/crm-business/">Business</a>
 		<ul>
@@ -322,78 +334,30 @@ Privacy Policy
 
 		</ul>
 		
-		
-	</li>
-	
-	<li><a href="http://www.macnewsworld.com/">MacNewsWorld</a>
-		
-		<ul>
-			<li><a href="http://www.macnewsworld.com/perl/section/apple-buzz/">Apple Buzz</a>
-		<ul>
-		<li><a href="http://www.macnewsworld.com/perl/section/apple-company/">Company</a></li>
-		<li><a href="http://www.macnewsworld.com/perl/section/apple-products/">Products</a></li>
-		</ul>
-	</li>
-		
-	<li><a href="http://www.macnewsworld.com/perl/section/business-mac/">Business</a>
-		<ul>
-		<li><a href="http://www.macnewsworld.com/perl/section/aapl-financial/">Apple Financial</a></li>
-		<li><a href="http://www.macnewsworld.com/perl/section/legal-mac/">Legal</a></li>
-		</ul>
-	</li>
-			
-	<li><a href="http://www.macnewsworld.com/perl/section/apple-hardware/">Hardware</a>
-		<ul>
-		<li><a href="http://www.macnewsworld.com/perl/section/ipad/">iPad</a></li>
-		<li><a href="http://www.macnewsworld.com/perl/section/iphone/">iPhone</a></li>
-		<li><a href="http://www.macnewsworld.com/perl/section/macs/">Macs</a></li>
-		</ul>
-	</li>
-	
-	<li><a href="http://www.macnewsworld.com/perl/section/ios-apps/">Mobile Apps</a>
-		<ul>
-		<li><a href="http://www.macnewsworld.com/perl/section/app-store/">App Store</a></li>
-		<li><a href="http://www.macnewsworld.com/perl/section/apple-developers/">Developers</a></li>
-		</ul>
-	</li>
-		
-	<li><a href="http://www.macnewsworld.com/perl/section/reviews-mac/">Reviews</a></li>
-
-	<li><a href="http://www.macnewsworld.com/perl/section/macsoftware/">Software</a>
-		<ul>
-		<li><a href="http://www.macnewsworld.com/perl/section/gaming-mac/">Gaming</a></li>
-		<li><a href="http://www.macnewsworld.com/perl/section/ios/">iOS</a></li>
-		<li><a href="http://www.macnewsworld.com/perl/section/mac-apps/">Mac Apps</a></li>
-		<li><a href="http://www.macnewsworld.com/perl/section/osx/">OS X</a></li>
-		</ul>
-	</li>
-	<li><a href="/perl/section/tech-blog/">Tech Blog</a></li>
-		
-		</ul>
-		
 	</li>
 
 	<li style="float: right; width: auto;">&nbsp;Reader Services&nbsp;
 	<ul>
 	<li><a href="http://www.ectnews.com/perl/User.pl">Account Management</a></li>
-	<li><a href="http://www.ectnews.com/about/affiliates.xhtml">Become an Affiliate</a></li>
 	<li><a href="http://www.ectnews.com/perl/board/mboard.pl">Discussion</a></li>
+	
 	<li><a href="http://www.ectnews.com/about/newsalerts/">News Alerts</a></li>
 	<li><a href="http://www.ectnews.com/perl/newsletter_registration.pl">Newsletters</a></li>
 
 	<li><a href="http://www.ectnews.com/about/link-to-us.xhtml#rss">RSS / <img style="vertical-align:middle" src="/images/2004/xml_36x14.gif" border="0" alt="XML"> Headline Feeds</a></li>
-	<li><a>Site Maps</a>
+	
+	
+	
+	<li><a href="http://www.ectnews.com/perl/search.pl">Search ECT News Network</a></li>
+	<li class="hrule"></li>
+	<li><a href="http://www.ectnews.com/about/network_map.xhtml">ECT News Network Map</a>
 		<ul>
-		<li><a href="http://www.ectnews.com/about/network_map.xhtml">ECT News Network Map</a></li>
-		<li class="hrule"></li>
 		<li><a href="http://www.crmbuyer.com/site_map/">CRM Buyer Site Map</a></li>
 		<li><a href="http://www.ecommercetimes.com/site_map/">E-Commerce Times Site Map</a></li>
 		<li><a href="http://www.linuxinsider.com/site_map/">LinuxInsider Site Map</a></li>
-		<li><a href="http://www.macnewsworld.com/site_map/">MacNewsWorld Site Map</a></li>
 		<li><a href="http://www.technewsworld.com/site_map/">TechNewsWorld Site Map</a></li>
 		</ul>
 	</li>
-	<li><a href="http://www.ectnews.com/perl/search.pl">Search ECT News Network</a></li>
 	</ul>
 </li>
 
@@ -401,13 +365,13 @@ Privacy Policy
 	</ul>
 	</div>
 	<script type="text/javascript" language="JavaScript"><!--//<![CDATA[
-	new ENN_menu2($("topmenubar"));
+	new ENN_menu(document.getElementById("topmenubar"));
 	//]]>//--></script>
 
 <div id="middlewrapper">
 <div id="breadcrumb">
 <!--<div id="snav" style=""><a href="/perl/board/mboard.pl/">DISCUSSION</a> | <a href="/perl/newsletter_registration.pl/">NEWSLETTERS</a> | <a href="http://www.ectnews.com/perl/User.pl/">ACCOUNT MGMT</a></div>-->
-<div id="snav" style="">June  2, 2013 &nbsp; 05:30:44 AM PDT</div>
+<div id="snav" style="">December 25, 2013 &nbsp; 02:34:43 AM PST</div>
 
 
 	<!-- bc -->
@@ -730,18 +694,18 @@ div#content-main div.content-block {
 
 <div id="lb2">
 
-	<!--ps: 128 crid: 7351:adx_t728r-1 cc:us-->
+	<!--ps: 128 crid: 8697:a-i_lmi_728-1 cc:us-->
 	<script type="text/javascript"><!--//<![CDATA[
-google_ad_client = "ca-pub-9908785769620396";
-/* TNW-728-ROS */
-google_ad_slot = "0201305106";
-google_ad_width = 728;
-google_ad_height = 90;
-//]]>//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"><!--//<![CDATA[
-//]]>//--></script>
-	<img class="ct-7351-adx_t728r-1" src="http://www.ectnews.com/adsys/count/7351/?nm=adx_t728r-1&amp;ENN_rnd=13701762441773&amp;ign=0/ign.gif" width="0" height="0" alt="" style="position:absolute; left:0px; top:0px">
-	<!--/ps: 128 crid: 7351:adx_t728r-1 cc:us-->
+  var ord = window.ord || Math.floor(Math.random() * 1e16);
+  document.write('<iframe src="http://ad.doubleclick.net/N8456/adi/IDG.ECTNews.com/IDG.ECTNews.com_US_5_Spotbuy;sf=1302_ldb;sz=728x90;ord=13879676834669?" width="728" height="90" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no"></iframe>');
+//]]>//--></script><iframe src="http://ad.doubleclick.net/N8456/adi/IDG.ECTNews.com/IDG.ECTNews.com_US_5_Spotbuy;sf=1302_ldb;sz=728x90;ord=13879676834669?" width="728" height="90" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no"></iframe>
+<noscript>
+<a href="http://ad.doubleclick.net/N8456/jump/IDG.ECTNews.com/IDG.ECTNews.com_US_5_Spotbuy;sf=1302_ldb;sz=728x90;ord=13879676834669?">
+<img src="http://ad.doubleclick.net/N8456/ad/IDG.ECTNews.com/IDG.ECTNews.com_US_5_Spotbuy;sf=1302_ldb;sz=728x90;ord=13879676834669?" width="728" height="90" />
+</a>
+</noscript>
+	<img class="ct-8697-a-i_lmi_728-1" src="http://www.ectnews.com/adsys/count/8697/?nm=a-i_lmi_728-1&amp;ENN_rnd=13879676834669&amp;ign=0/ign.gif" width="0" height="0" alt="" style="position:absolute; left:0px; top:0px">
+	<!--/ps: 128 crid: 8697:a-i_lmi_728-1 cc:us-->
 	
 
 </div>
@@ -800,7 +764,6 @@ google_ad_height = 90;
 	<li><a class="headline" href="http://www.technewsworld.com/">TechNewsWorld</a></li>
 	<li><a class="headline" href="http://www.linuxinsider.com/">LinuxInsider</a></li>
 	<li><a class="headline" href="http://www.crmbuyer.com/">CRM Buyer</a></li>
-	<li><a class="headline" href="http://www.macnewsworld.com/">MacNewsWorld</a></li>
 	</ul>
 	<div style="position: absolute;width:455px; height:125px;"><a href="http://www.ectnews.com/"><img src="/images/2013/enn-logo-bottom.png" align="left" width="455" height="125" border="0" style="margin-top: 10px; margin-left: -5px;" alt="ECT News Network"></a></div>
 
@@ -819,7 +782,6 @@ google_ad_height = 90;
 	<div>Reader Services</div>
 	<ul>
 	<li><a class="headline" href="http://www.ectnews.com/perl/User.pl">Account Management</a></li>
-	<li><a class="headline" href="http://www.ectnews.com/about/affiliates.xhtml">Become an Affiliate</a></li>
 	<li><a class="headline" href="http://www.ectnews.com/perl/board/mboard.pl">Discussion</a></li>
 	<li><a class="headline" href="http://www.ectnews.com/about/link-to-us.xhtml">Linking Policy</a></li>
 	<li><a class="headline" href="http://www.ectnews.com/about/network_map.xhtml">Network Map</a></li>
@@ -890,23 +852,12 @@ function googleTranslateElementInit() {
   });
 }
 //]]>//--></script><script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-<div class="fb-recommendations-bar" data-read-time="10" data-trigger="10%" ref="facebook_recommendations"></div>
+<!-- <div class="fb-recommendations-bar" data-read-time="10" data-trigger="10%" data-read-time="10" ref="facebook_recommendations"></div> -->
+
 		
 
 
 
-<script type="text/javascript">
-	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-	try {
-		var pageTracker = _gat._getTracker("UA-9357282-6");
-		pageTracker._setDomainName(".ectnews.com");
-		pageTracker._setAllowHash(false);
-		pageTracker._trackPageview();
-	} catch(err) {}
-</script>
 
 
 
