--- a/c/ca/cas/caseyresearch.com.html
+++ b/c/ca/cas/caseyresearch.com.html
@@ -1,15 +1,17 @@
-<!--The following is the downloaded HTML source of the caseyresearch.com privacy policy that was archived on 2013-05-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130513224028id_/http%3A//www.caseyresearch.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the caseyresearch.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225135217id_/http%3A//www.caseyresearch.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 	<meta charset="utf-8">
 	<title>Casey Research, LLC Privacy Policy | Casey Research</title>
 	<link rel="stylesheet" type="text/css" media="all" href="//d15s74raupkmp7.cloudfront.net/css/columnal/columnal_85.css">
-	<link rel="stylesheet" type="text/css" media="all" href="http://www.caseyresearch.com/?css=site_css/custom.v.1367583413">
+	<link rel="stylesheet" type="text/css" media="all" href="http://www.caseyresearch.com/?css=site_css/custom.v.1385231936">
+        <link rel="stylesheet" type="text/css" media="all" href="http://www.caseyresearch.com/?css=site_css/marketing.v.1371487832">
 	<link href="//fonts.googleapis.com/css?family=Droid+Serif:400,700|Open+Sans:300,400,600,700,800|Open+Sans+Condensed:300,300italic,700" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" media="all" href="//d15s74raupkmp7.cloudfront.net/master/js/fancybox/jquery.fancybox-1.3.4.css">
 	<script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript" async="" src="https://www.google.com/cse/cse.js?cx=005774948632547391106:phvcpf9rzok"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" charset="utf-8" src="http://www.caseyresearch.com/?ACT=jquery"></script>
 	<!--[if lt IE 9]>
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 	<script type="text/javascript">
 <!--//--><![CDATA[//><!--
@@ -26,6 +28,8 @@
 </script>        
 	<script type="text/javascript" src="//d15s74raupkmp7.cloudfront.net/js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="http://www.caseyresearch.com/assets/cr/js/casey_functions.js"></script>
+ 	<script type="text/javascript" src="//d15s74raupkmp7.cloudfront.net/master/js/fancybox/jquery.fancybox-1.3.4.pack.js"></script>  
+	 <script type="text/javascript" src="//d15s74raupkmp7.cloudfront.net/master/js/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>  
 	<script>
     (function() {
         var cx = '005774948632547391106:phvcpf9rzok';
@@ -66,7 +70,7 @@ googletag.enableServices();
 <header id="site-header">
 <div id="site-header-bar" class="row">
 	<div class="col_5">
-		<a href="/"><img src="http://d15s74raupkmp7.cloudfront.net/images/misc/cr-logo-grey.png" alt="Casey Research"></a>
+		<a href="/"><img src="//d15s74raupkmp7.cloudfront.net/images/misc/cr-logo-grey.png" alt="Casey Research"></a>
 	</div>
 	<div class="col_1">
 		<p>&nbsp;</p>
@@ -76,7 +80,7 @@ googletag.enableServices();
 <a class="user-logout-button" href="/my/logOutUser.php" title="Subscriber Logout" style="color:#8E001C;display:none">
 <img src="//d1w116sruyx1mf.cloudfront.net/images/icons/logout-button-blue.png" border="0"></a>
 <a class="user-login-button" href="/my/login.php" title="Subscriber Login" style="color:#8E001C;">
-<img src="http://d15s74raupkmp7.cloudfront.net/images/misc/login-button-blue4.png" border="0"></a>
+<img src="//d15s74raupkmp7.cloudfront.net/images/misc/login-button-blue4.png" border="0"></a>
 </div>
 	</div>
 	<div class="col_4 last">
@@ -99,11 +103,11 @@ googletag.enableServices();
 
 			<li class="menuitem-reports-books "><a href="/special-report">Reports &amp; Books</a></li>
 
-			<li class="menuitem-investor-tools1 "><a href="/investor-resources">Investor Tools</a></li>
-
 			<li class="menuitem-products-services "><a href="/premium-publications">Products &amp; Services</a></li>
 
-			<li class="menuitem-about-us "><a href="/philosophy">About Us</a></li>
+			<li class="menuitem-investor-tools1 "><a href="/investor-resources">Tools</a></li>
+
+			<li class="menuitem-about-us "><a href="/philosophy">About</a></li>
 
 			<li class="menuitem-my-casey "><a href="/my">My Casey</a></li>
 
@@ -119,7 +123,7 @@ googletag.enableServices();
 
 <div class="row casey-page {url-title}">
 	<div class="col_12 content">
-		<div>
+	 <div>
 	This Privacy Policy applies to the websites (together, the "Sites") that are owned or operated by Casey Research, LLC (referred to herein as "we," "us," and "our"), including CaseyResearch.com, KitcoCasey.com and any other websites that display or link to this Privacy Policy. We collect certain personal information based upon and as a result of the use of our Sites by visitors and subscribers (referred to herein as "you" or "your"). Our collection and use of your information will be conducted in accordance with this Privacy Policy.<br>
 	<br>
 	<b>1. Information That We Collect. </b><br>
@@ -298,5 +302,6 @@ googletag.enableServices();
 	</div><!-- eo .container -->
 </div>
 </footer>
+<!-- i-7181980b / ec2-54-225-115-250.compute-1.amazonaws.com -->
 
 </body></html>
