--- a/s/si/sin/singlessalad.com.html
+++ b/s/si/sin/singlessalad.com.html
@@ -1,10 +1,20 @@
-<!--The following is the downloaded HTML source of the singlessalad.com privacy policy that was archived on 2013-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130629151710id_/http%3A//singlessalad.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the singlessalad.com privacy policy that was archived on 2013-12-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225164738id_/http%3A//singlessalad.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-    <title>Privacy Policy - singlessalad.com</title> <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <link rel="shortcut icon" href="/favicon.ico?17680&amp;7"> <meta name="description" content="singlessalad.com"> <meta http-equiv="X-UA-Compatible" content="chrome=1"> <meta http-equiv="Content-Language" content="en"> <meta name="Language" content="English"> <link href="/theme/system.common.css?17680&amp;7" rel="stylesheet" type="text/css"> <!--[if lte IE 7]> <link href="/theme/system.ie.css?17680&7" rel="stylesheet" type="text/css"/> <![endif]--> <link href="/theme/theme.common.css?17680&amp;7" rel="stylesheet" type="text/css"> <link href="/theme/custom.css?17680&amp;7" rel="stylesheet" type="text/css"> <!-- Compacted and minified js --> <script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script language="JavaScript" type="text/javascript" src="/scripts/df.js?17680"></script> <script language="JavaScript" type="text/javascript" src="/theme/theme.js?17680"></script> </head>
+    <title>Privacy Policy - SinglesSalad</title> <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <link rel="shortcut icon" href="/favicon.ico?20628&amp;10"> <meta name="description" content="singlessalad.com"> <meta http-equiv="X-UA-Compatible" content="chrome=1"> <meta http-equiv="Content-Language" content="en"> <meta name="Language" content="English"> <link href="/theme/system.common.css?20628&amp;10" rel="stylesheet" type="text/css"> <!--[if lte IE 7]> <link href="/theme/system.ie.css?20628&amp;10" rel="stylesheet" type="text/css"/> <![endif]--> <link href="/theme/theme.common.css?20628&amp;10" rel="stylesheet" type="text/css"> <link href="/theme/custom.css?20628&amp;10" rel="stylesheet" type="text/css"> <!-- Compacted and minified js --> <script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script language="JavaScript" type="text/javascript" src="/scripts/df.js?20628"></script> <script language="JavaScript" type="text/javascript" src="/theme/theme.js?20628"></script> <script language="JavaScript" type="text/javascript">
+$.DF.require('/scripts/components/Decorator.js');
+</script> <script language="JavaScript" type="text/javascript">
+if(('header_01.png' != '') && ('header_01.png' != '[EMPTY]')) $.DF.Decorator.Header({
+	image:	'/images/decorator/xmass/dating/light/Header/header_01.png'
+});
 
-<body class="staticjsp dating general en ltr us">
+if(('footer_01.png' != '') && ('footer_01.png' != '[EMPTY]')) $.DF.Decorator.Footer({
+	image:	'/images/decorator/xmass/dating/light/Footer/footer_01.png'
+});
+</script></head>
+
+<body class="staticjsp dating general en en-GB ltr us">
 
 <div class="holder" id="header">
 	<div class="content">
@@ -24,7 +34,7 @@ google_ad_height = 90;
 </div>
 </div><ul id="MainMenu" class="MainMenu"> <li class="selected"><a href="/" title="Home">Home</a></li> <li class=""><a href="/login/" title="Login">Login</a></li> <li class=""><a href="/registration/" title="Register">Register</a></li> <li class="" id="lastMainMenuItem"><a href="/contacts/" title="Contacts">Contacts</a></li> <li class="SocialLogin"> Login with: <ul class="social-providers size16x16"> <li class="facebook"><a href="/external/start/facebook" title="Facebook login">&nbsp;</a></li> </ul> </li> </ul><script language="JavaScript" type="text/javascript">
 $.DF.require('/scripts/components/SwitchLocale.js');
-</script> <div class="SwitchLocale"> <p>Language:</p> <div><span class="label">English</span></div><div id="switchLocalesTrigger"><a href="/myprofile/update/#lc">&nbsp;</a></div> <div class="highlighted"> <div class="topline"></div> <ul> <li class=""><a href="?lc=hr">Croatian - Hrvatski (Hr)</a></li><li class=""><a href="?lc=cs">Czech - Český (Cs)</a></li><li class=""><a href="?lc=sk">Slovak - Slovensky (Sk)</a></li><li class=""><a href="?lc=nl">Dutch - Nederlands (Nl)</a></li><li class=""><span>English - English (En)</span></li><li class=""><a href="?lc=fr">French - Français (Fr)</a></li><li class=""><a href="?lc=de">German - Deutsch (De)</a></li><li class=""><a href="?lc=el">Greek - Ελληνικά (El)</a></li><li class=""><a href="?lc=it">Italian - Italiano (It)</a></li><li class=""><a href="?lc=ja">Japanese - 日本語 (Ja)</a></li><li class=""><a href="?lc=lt">Lithuanian - Lietuvių (Lt)</a></li><li class=""><a href="?lc=no">Norwegian - Norsk (No)</a></li><li class=""><a href="?lc=pl">Polish - Polski (Pl)</a></li><li class=""><a href="?lc=pt">Portuguese - Português&nbsp; (Pt)</a></li><li class=""><a href="?lc=sr">Serbian - Srpski (Sr)</a></li><li class=""><a href="?lc=es">Spanish - Español (Es)</a></li><li class=""><a href="?lc=sv">Swedish - Svenska (Sv)</a></li><li class="last"><a href="?lc=tr">Turkish - Türkçe (Tr)</a></li> </ul> </div> </div> <ul id="LoginMenu" class="MainMenu"> <li><a href="/login/" title="Login">Login</a></li> </ul></div>
+</script> <div class="SwitchLocale"> <p>Language:</p> <div><span class="label label-native">English</span><span class="label label-lc">en</span></div><div id="switchLocalesTrigger"><a href="/myprofile/update/#lc">&nbsp;</a></div> <div class="highlighted"> <div class="topline"></div> <ul> <li class=""><a href="?lc=cs-CZ">Český</a></li><li class=""><a href="?lc=de-DE">Deutsch</a></li><li class=""><span>English</span></li><li class=""><a href="?lc=es-ES">Español</a></li><li class=""><a href="?lc=fr-FR">Français</a></li><li class=""><a href="?lc=hr-HR">Hrvatski</a></li><li class=""><a href="?lc=it-IT">Italiano</a></li><li class=""><a href="?lc=lt-LT">Lietuvių</a></li><li class=""><a href="?lc=nl-NL">Nederlands</a></li><li class=""><a href="?lc=no">Norsk</a></li><li class=""><a href="?lc=pl-PL">Polski</a></li><li class=""><a href="?lc=pt-PT">Português&nbsp;</a></li><li class=""><a href="?lc=sk-SK">Slovensky</a></li><li class=""><a href="?lc=sr">Srpski</a></li><li class=""><a href="?lc=sv-SE">Svenska</a></li><li class=""><a href="?lc=tr-TR">Türkçe</a></li><li class=""><a href="?lc=el-GR">Ελληνικά</a></li><li class="last"><a href="?lc=ja-JP">日本語</a></li> </ul> </div> </div> <ul id="LoginMenu" class="MainMenu"> <li><a href="/login/" title="Login">Login</a></li> </ul></div>
 </div>
 
 <div class="holder" id="main">
@@ -34,11 +44,11 @@ $.DF.require('/scripts/components/SwitchLocale.js');
 			</div>
 		
 		<div id="body">
-			<div class="column" id="left"><ul class="staticMenu"> <li><a href="/about/">About</a></li> <li><a href="/privacy/">Privacy</a></li> <li><a href="/terms/">Terms of Use</a></li> <li><a href="/faq/">FAQs</a> </li><li class="lastStaticMenuItem">Tutorials <ul class="staticSubMenu"> <li><a href="/tutorials/record_photos_and_videos_from_your_webcam/">How to record photos and videos from your WebCam!</a></li> </ul> </li> <!-- <li>Success Stories</li> <li> <ul class="staticSubMenu"> <li>For Men</li> <li><a href="">For Women</a></li> </ul> </li>--> </ul></div>
+			<div class="column" id="left"><ul class="staticMenu"> <li><a href="/about/">About</a></li> <li><a href="/privacy/">Privacy</a></li> <li><a href="/terms/">Terms of Use</a></li> <li><a href="/faq/">FAQs</a> </li><li class="lastStaticMenuItem">Tutorials <ul class="staticSubMenu"> <li><a href="/tutorials/record_photos_and_videos_from_your_webcam/">How to record photos and videos from your WebCam!</a></li> <li><a href="/tutorials/how_to_get_emails_placed_to_the_social_tab/">How to get emails placed to the Social tab in your Gmail mailbox</a></li> </ul> </li> <!--<li><a href="/humour/ask_the_expert/">Ask the Expert</a></li>--> <!-- <li>Success Stories</li> <li> <ul class="staticSubMenu"> <li>For Men</li> <li><a href="">For Women</a></li> </ul> </li>--> </ul></div>
 			
 			<div class="column" id="right">
 				<div class="Static">
-					<h2>This Privacy Policy is effective for singlessalad.com  members<br>Last edition — Novermber 26, 2012</h2> <p>The singlessalad.com web-site and the service is the member of Dating Factory network, which is operated by Caerus AG, a company  registered under the laws of Switzerland, whose registered office is  Lauriedstrasse 1, CH-6300, Zug, Switzerland. </p>
+					<h2>This Privacy Policy is effective for singlessalad.com  members<br>Last edition — Novermber 26, 2012</h2> <p>The singlessalad.com web-site and the service is the member of Dating Factory network, which is operated by Caerus AG, a company  registered under the laws of Switzerland, whose registered office is  St-Antons-Gasse 4, CH-6300, Zug, Switzerland. </p>
 <p>singlessalad.com is committed to providing you with the  professional and high quality introductions and dating service and is  therefore committed to protecting your privacy. We follow all the  procedures that are set out in this document, and it needs to be read  and understood together with the <a href="/terms/">Terms of  use</a> of the singlessalad.com web-site. singlessalad.com Privacy policy  is intended to ensure that you can use the site and contact other  members without having to worry about confidentiality issues. </p>
 <p>singlessalad.com may change some clauses of this Policy from time  to time, and members are advised to review this Policy regularly to  make sure they read and understand the most current version of it. </p>
 <ol>
@@ -71,7 +81,7 @@ $.DF.require('/scripts/components/SwitchLocale.js');
 
 <div class="holder" id="footer">
 	<div class="content">
-		<div class="Footer"> <ul id="bottonNavigation"> <li><a href="/about/">About</a></li> <li><a href="/terms/">Terms of Use</a></li> <li><a href="/privacy/">Privacy</a></li> <li><a href="/cookie/">Cookies</a></li> <li><a href="/faq/">FAQs</a></li> <li><a href="/contacts/">Contacts</a></li> <li><a href="/links/">Links</a></li> <li><a href="https://epoch.com/billingsupport" target="_blank">Billing Support</a></li> <!--<li><a href="/sitemap.xml">XML site map</a></li>--> <li class="last"><a href="http://www.datingfactory.com/">Affiliates</a></li> </ul> <div id="copyright">© 2008-2013 <br>powered by <a href="http://www.datingfactory.com/">Dating Factory</a></div> </div> <div class="clear"></div> <p class="warningNotification"><a href="/usc/" target="_blank">18 U.S.C. 2257 Exemption Statement</a></p> <!--This is page footer-->
+		<div class="Footer"> <ul id="bottonNavigation"> <li><a href="/about/">About</a></li> <li><a href="/terms/">Terms of Use</a></li> <li><a href="/privacy/">Privacy</a></li> <li><a href="/cookie/">Cookies</a></li> <li><a href="/faq/">FAQs</a></li> <li><a href="/contacts/">Contacts</a></li> <li><a href="/links/">Links</a></li> <!--<li><a href="/sitemap.xml">XML site map</a></li>--> <li class="last"><a href="http://www.datingfactory.com/">Affiliates</a></li> </ul> <div id="copyright">© 2008-2013 <br>powered by <a href="http://www.datingfactory.com/">Dating Factory</a></div> </div> <div class="clear"></div> <p class="warningNotification"><a href="/usc/" target="_blank">18 U.S.C. 2257 Exemption Statement</a></p> <!--This is page footer-->
 <div style="margin-left:115px;">
 <script type="text/javascript"><!--
 google_ad_client = "ca-pub-2274622707934338";
@@ -83,8 +93,7 @@ google_ad_height = 90;
 </script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
-</div>
-<script src="http://www.ibario.com/tools/adsensetracker/astracker.min.js" type="text/javascript"></script><!-- System every_page_tracking_code -->
+</div><!-- System every_page_tracking_code -->
 
 <script type="text/javascript">
 window.google_analytics_uacct = "UA-32753505-9";
@@ -120,7 +129,7 @@ systemPageTracker._setDomainName("auto");
 systemPageTracker._setVar("dating/general/l1/white-blue-red/t171"); 
 systemPageTracker._setCustomVar(1, 'ipTV', escape(navigator.userAgent), 2);
 systemPageTracker._trackPageview();
-} catch(err) {}</script> <noscript> <img src="/ga.do?utmac=MO-8993531-7&amp;utmn=847987448&amp;utmr=-&amp;utmp=%2Fprivacy%2F&amp;guid=ON"/> </noscript> </div>
+} catch(err) {}</script> <noscript> <img src="/ga.do?utmac=MO-8993531-7&amp;utmn=1527295195&amp;utmr=-&amp;utmp=%2Fprivacy%2F&amp;guid=ON"/> </noscript> </div>
 </div>
 
 
